# borderless

./: .gitignore  Cargo.toml  README.md  flake.nix  flipper_flip.json  flipper_introduction.json  flipper_set_true.json  run-contract.sh
contracts/abi-test/: Cargo.toml  flipper_introduction.json  flipper_print_env.json
contracts/abi-test/src/: lib.rs
contracts/collections/: Cargo.toml  collections_introduction.json  hashmap_test.json
contracts/collections-test/: Cargo.toml
contracts/collections-test/src/: hashmap_basics.rs  lazyvec_basics.rs  lazyvec_product.rs  lib.rs
contracts/collections/src/: hashmap_basics.rs  lazyvec_product.rs  lib.rs
contracts/flipper/: Cargo.toml
contracts/flipper/src/: lib.rs
contracts/lazyvec-test/: Cargo.toml  lazyvec_introduction.json  test_integrity.json  test_product.json
contracts/lazyvec-test/src/: basics.rs  lib.rs  product.rs
environment/: Cargo.toml
environment/src/: api.rs  lib.rs
environment/src/off_chain/: mod.rs
environment/src/on_chain/: mod.rs
examples/abi-test/: flipper_revocation.json  flipper_set_false.json
examples/abi-test-swagent/: Cargo.toml
examples/abi-test-swagent/src/: lib.rs
examples/abi-test/src/: lib.rs
examples/callchain-agent/: Cargo.toml  Manifest.toml
examples/callchain-agent/src/: contract_actions.rs  lib.rs
examples/callchain-contract/: Cargo.toml  Manifest.toml  expanded.rs
examples/callchain-contract/src/: agent_actions.rs  lib.rs
examples/collections/: Cargo.toml  collections_introduction.json  introduction.json  lazyvec_test.json  run_basics.json  run_complex.json
examples/collections/src/: hashmap_basics.rs  hashmap_test.rs  lazyvec_basics.rs  lazyvec_test.rs  lib.rs  product.rs
examples/flipper/: expanded.rs
examples/flipper-agent/: Cargo.toml  Manifest.toml
examples/flipper-agent/src/: lib.rs
examples/flipper-contract/: Cargo.toml  Manifest.toml
examples/flipper-contract/src/: lib.rs
examples/flipper/src/: lib.rs
examples/hello-agent/: Cargo.toml  Manifest.toml  introduction.json
examples/hello-agent/src/: lib.rs
examples/lazyvec-test/: lazyvec_introduction.json
examples/lazyvec-test/src/: lib.rs
examples/ledger-test/: Cargo.toml  Manifest.toml  introduction.json_template
examples/ledger-test/src/: lib.rs
examples/order-oneshot/: Cargo.toml  Manifest.toml
examples/order-oneshot/src/: lib.rs
examples/order-template/: Cargo.toml  Manifest.toml  introduction.json_template
examples/order-template/src/: lib.rs
examples/order-with-catalogue/: Cargo.toml  Manifest.toml  introduction.json_template
examples/order-with-catalogue/src/: lib.rs
examples/transport-rfq-autobidder/: Cargo.toml  Manifest.toml  introduction.json_template
examples/transport-rfq-autobidder/src/: lib.rs
examples/transport-rfq-template/: Cargo.toml  Manifest.toml  introduction.json_template
executor/runner/: Cargo.toml
executor/runner/src/: main.rs  server.rs
executor/runtime/: Cargo.toml  build.rs
executor/runtime/src/: action_log.rs  controller.rs  db.rs  error.rs  http.rs  lib.rs  logger.rs  rt.rs  vm.rs
executor/runtime/src/db/: action_log.rs  controller.rs  ledger.rs  logger.rs  subscriptions.rs
executor/runtime/src/http/: agent.rs  contract.rs  ledger.rs
executor/runtime/src/rt/: action_log.rs  agent.rs  contract.rs  logger.rs  registry.rs  swagent.rs  vm.rs
executor/runtime/src/rt/agent/: tasks.rs
executor/runtime/src/rt/swagent/: tasks.rs
json-proof/: Cargo.toml
json-proof/src/: lib.rs  main.rs
kv-store/: Cargo.toml
kv-store/src/: lib.rs
kv-store/src/backend/: lmdb.rs
primitives/commerce-types/: Cargo.toml
primitives/commerce-types/src/: core.rs  lib.rs  order.rs  transport.rs
primitives/currency-4217/: Cargo.toml
primitives/currency-4217/src/: lib.rs
primitives/format/: Cargo.toml
primitives/hash/: Cargo.toml
primitives/hash/src/: build.rs  hash_generated.rs  lib.rs
primitives/hash/src/flatbuffer/: hash.fbs
primitives/id-types/: Cargo.toml
primitives/id-types/src/: lib.rs
primitives/pkg/: Cargo.toml
primitives/pkg/src/: author.rs  dto.rs  git_info.rs  lib.rs  manifest.rs  semver.rs
registry/: Cargo.toml
registry/client/: Cargo.toml
registry/client/src/: error.rs  lib.rs
registry/server/: Cargo.toml
registry/server/src/: error.rs  main.rs  registry.rs
registry/src/: error.rs  main.rs  models.rs
registry/src/db/: mod.rs
registry/src/db/entities/: author.rs  capabilities.rs  git_info.rs  index.rs  mod.rs  package.rs  package_author.rs  registry.rs  source.rs  url_white_list.rs
registry/src/migrator/: m20250605_000001_create_authors_table.rs  m20250605_000002_create_registries_table.rs  m20250605_000003_create_gitinfo_table.rs  m20250605_000004_ceate_capabilities_table.rs  m20250605_000005_create_url_whitelists_table.rs  m20250605_000006_create_sources_table.rs  m20250605_000007_create_pkgs_table.rs  mod.rs
sdk/_old/: Cargo.toml
sdk/abi/: Cargo.toml
sdk/abi/src/: lib.rs
sdk/base/: Cargo.toml
sdk/core/: Cargo.toml
sdk/core/src/: agents.rs  collections.rs  common.rs  contract.rs  contracts.rs  events.rs  http.rs  internal.rs  lazy.rs  lib.rs  log.rs  private.rs  registers.rs  storage.rs
sdk/core/src/agents/: env.rs
sdk/core/src/collections/: appendvec.rs  hashmap.rs  lazyvec.rs  ringbuffer.rs
sdk/core/src/collections/hashmap/: cache.rs  iterator.rs  keyvalue.rs  metadata.rs  proxy.rs
sdk/core/src/collections/lazyvec/: cache.rs  iterator.rs  lazyvec.rs  mod.rs  node.rs  proxy.rs
sdk/core/src/contracts/: env.rs  ledger.rs
sdk/core/src/internal/: action_vec.rs  registers.rs  storage_keys.rs  storage_traits.rs
sdk/core/src/private/: action_log.rs  action_vec.rs  env.rs  http.rs  registers.rs  storage_keys.rs  storage_traits.rs
sdk/core/src/private/env/: mod.rs  off_chain.rs  on_chain.rs
sdk/macros/: Cargo.toml
sdk/macros/src/: action.rs  agent.rs  contract.rs  lib.rs  schedule.rs  sink.rs  state.rs  utils.rs
storage/kv-backends/: Cargo.toml
storage/kv-backends/src/: lib.rs  lmdb.rs
storage/kv-traits/: Cargo.toml
storage/kv-traits/src/: lib.rs
(+13 files in other folders)
