[workspace]
members = [
  "examples/abi-test",
  "examples/abi-test-swagent",
  "examples/collections",
  "examples/flipper-agent",
  "examples/flipper-contract",
  "examples/callchain-agent",
  "examples/callchain-contract",
  "examples/hello-agent",
  "executor/runner",
  "executor/runtime",
  "json-proof",
  "sdk/abi" ,
  "sdk/core",
  "sdk/macros",
  "kv-store",
  "primitives/hash",
  "primitives/id-types",
  "primitives/format",
  "registry/server",
  "registry/client"
]
resolver = "2"

[workspace.dependencies]
# Export own crates
borderless = { path = "sdk/core" }
borderless-abi = { path = "sdk/abi" }
borderless-sdk-macros = { path = "sdk/macros" }
borderless-id-types = { path = "primitives/id-types" }
borderless-format = { path = "primitives/format" }
borderless-hash = { path = "primitives/hash" }
borderless-kv-store = { path = "kv-store" }
borderless-runtime = { path = "executor/runtime" }
borderless-registry-server = { path = "registry/server" }
borderless-registry-client = { path = "registry/client" }


# External dependencies
anyhow = "1.0"
log = "0.4"
postcard = { version = "1.1", features = ["alloc"] }
rand = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "2.0"
uuid = "1.16"
nohash-hasher = "0.2"
xxhash-rust = { version = "0.8", features = ["const_xxh3", "xxh32", "xxh64"] }

# Use these for wasm binaries:
#[profile.release]
#opt-level = "z"
#codegen-units = 1
#lto = true
#strip = "symbols"
