[workspace]
members = [
  "examples/collections",
  "examples/flipper-agent",
  "examples/flipper-contract",
  "examples/callchain-agent",
  "examples/callchain-contract",
  "examples/hello-agent",
  "executor/runner",
  "executor/runtime",
  "json-proof",
  "sdk/abi" ,
  "sdk/core",
  "sdk/macros",
  "kv-store",
  "primitives/hash",
  "primitives/id-types",
  "primitives/pkg",
  "registry",
]
resolver = "2"

[workspace.dependencies]
# Export own crates
borderless = { version = "0.1.3", path = "sdk/core" }
borderless-abi = { version = "0.1.0", path = "sdk/abi" }
borderless-sdk-macros = { version = "0.2.0", path = "sdk/macros" }
borderless-id-types = { version = "0.1.1", path = "primitives/id-types" }
borderless-hash = { version = "1.0.0", path = "primitives/hash" }
borderless-kv-store = { version = "1.0.0", path = "kv-store" }
borderless-pkg = { version = "0.1.0", path = "primitives/pkg" }
borderless-runtime = { version = "0.2.0", path = "executor/runtime" }
borderless-registry = { version = "0.1.0", path = "registry" }
json-proof = { version = "1.0.0", path = "json-proof" }

# External dependencies
anyhow = "1.0"
log = "0.4"
postcard = { version = "1.1", features = ["alloc"] }
rand = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "2.0"
uuid = "1.16"
nohash-hasher = "0.2"
xxhash-rust = { version = "0.8", features = ["const_xxh3", "xxh32", "xxh64"] }

# Use these for wasm binaries:
#[profile.release]
#opt-level = "z"
#codegen-units = 1
#lto = true
#strip = "symbols"
