[workspace]
members = [
  "examples/*",
  "executor/runner",
  "executor/runtime",
  "json-proof",
  "sdk/abi" ,
  "sdk/core",
  "sdk/macros",
  "kv-store",
  "primitives/hash",
  "primitives/id-types",
  "primitives/pkg",
  "primitives/commerce-types",
  "primitives/currency-4217",
  "registry",
]
resolver = "2"

[workspace.dependencies]
# Export own crates
borderless = { version = "0.3.0", path = "sdk/core" }
borderless-abi = { version = "0.2.0", path = "sdk/abi" }
borderless-sdk-macros = { version = "0.2.1", path = "sdk/macros" }
borderless-id-types = { version = "0.1.5", path = "primitives/id-types" }
borderless-hash = { version = "1.0.0", path = "primitives/hash" }
borderless-kv-store = { version = "1.1.0", path = "kv-store" }
borderless-pkg = { version = "0.1.0", path = "primitives/pkg" }
borderless-runtime = { version = "0.4.0", path = "executor/runtime" }

# Non-Borderless prefixed crates
currency-4217 = { version = "0.1.0", path = "primitives/currency-4217" }
commerce-types = { version = "0.1.1", path = "primitives/commerce-types" }

# External dependencies
anyhow = "1.0"
log = "0.4"
postcard = { version = "1.1", features = ["alloc"] }
rand = "0.9"
schemars = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "2.0"
uuid = "1.16"
nohash-hasher = "0.2"
xxhash-rust = { version = "0.8", features = ["const_xxh3", "xxh32", "xxh64"] }

# Use these for wasm binaries:
#[profile.release]
#opt-level = "z"
#codegen-units = 1
#lto = true
#strip = "symbols"
