[package]
name = "environment"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared dependencies
cfg-if.workspace = true
serde.workspace = true
postcard.workspace = true

# Dependencies required by WASM compilation
[target.'cfg(target_arch = "wasm32")'.dependencies]
borderless-abi.workspace = true

# Dependencies required by native compilation
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand.workspace = true
nohash-hasher.workspace = true