[package]
name = "json-proof"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "jproof"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base16 = "0.2"
clap = { version = "4.5", features = ["derive"] }
json-syntax = { version = "0.12", features = ["canonicalize", "serde_json"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha3 = "0.10"
thiserror.workspace = true

[dev-dependencies]
rand = "0.8"
serde_json = { version = "1.0", features = ["arbitrary_precision", "preserve_order"] }
