[package]
name = "borderless-kv-store"
version = "1.0.0"
edition = "2021"
description = "Basic kv-storage traits and backend implementations"
authors = [ "Paul Jökel <paul.joekel@borderless-technologies.com>", "Christian Hammermeister <c.hammermeister@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless"
homepage = "https://borderless-technologies.com/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
lmdb = "0.8.0"
lmdb-sys = "0.8.0"

[dev-dependencies]
tempfile = "3.14.0"
rand.workspace = true
