[package]
name = "borderless-registry"
version = "0.1.0"
edition = "2021"
description = "Custom registry to distribute borderless packages"
authors = [ "Paul Jökel <paul.joekel@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless"
homepage = "https://borderless-technologies.com/"
license-file = "../LICENSE"

[dependencies]
borderless-kv-store.workspace = true
borderless-pkg.workspace = true
borderless-id-types.workspace = true
borderless-hash.workspace = true
anyhow.workspace = true
thiserror.workspace = true

axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.32", features = ["derive"] }
bincode = "1"
serde_json = "1"
