[package]
name = "collections-test-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
borderless.workspace = true
serde.workspace = true

# NOTE: This would be placed inside the macro crate
xxhash-rust = { version = "0.8.12", features = ["const_xxh3", "xxh32"] }
