[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
borderless-sdk = { path = "../../sdk/core", features = ["generate_ids"] }
borderless-runtime = { path = "../runtime" }
borderless-kv-store = { path = "../../kv-store" }
clap = { version = "4.5.32", features = ["derive"] }
colog = "1.3.0"
log.workspace = true
tokio = { version = "1.44.2", features = ["macros", "rt"] }
tower = { version = "0.5.2", features = ["make"] }
hyper = { version = "1.6.0", features = ["server", "http1"] }
axum = "0.8.3"
