[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
borderless.workspace = true
borderless-runtime.workspace = true
borderless-kv-store.workspace = true
borderless-registry-client.workspace = true
borderless-format.workspace = true
clap = { version = "4.5.32", features = ["derive"] }
colog = "1.3.0"
log.workspace = true
tokio = { version = "1.44.2", features = ["macros", "rt"] }
axum = "0.8.3"
