[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
borderless.workspace = true
borderless-runtime = { workspace = true, features = ["log"] }
borderless-kv-store.workspace = true
serde_json.workspace = true

clap = { version = "4.5.32", features = ["derive"] }
colog = "1.3.0"
log.workspace = true
tokio = { version = "1.44.2", features = ["macros", "rt"] }
axum = "0.8.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
