[package]
name = "borderless-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
borderless-sdk = { path = "../../sdk/core" }
borderless-kv-store = { path = "../../kv-store" }
nohash = "0.2.0"
log.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
wasmtime = "30.0.2"
bytes = "1.10.1"
http = "1.3.1"
tower = "0.5.2"
serde_json.workspace = true
parking_lot = "0.12.3"
mime = "0.3.17"
ahash = "0.8.11"
lru = "0.14.0"
serde_bytes.workspace = true
thiserror.workspace = true
