[package]
name = "borderless-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
borderless.workspace = true
borderless-format.workspace = true
borderless-kv-store.workspace = true
nohash = "0.2.0"
log.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
wasmtime = "30"
bytes = "1"
http = { version = "1", optional = true }
tower = { version = "0.5", optional = true }
serde_json.workspace = true
parking_lot = "0.12"
mime = { version = "0.3", optional = true }
ahash = { version = "0.8", optional = true }
lru = { version = "0.14", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
serde_bytes.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["macros"], optional = true }
tokio-tungstenite = { version = "0.26.2", features = ["rustls"] }
futures-util = "0.3.31"


[features]
default = [ "http", "contracts", "agents" ] # for now we enable all features by default
contracts = ["code-store"]
agents = ["code-store", "dep:reqwest", "dep:tokio"]
code-store = ["dep:lru", "dep:ahash"]
http = ["dep:http", "dep:tower", "dep:mime"]
