[package]
name = "commerce-types"
version = "0.1.0"
edition = "2021"
description = "Useful datatypes for e-commerce, logistics and procurement"
authors = [ "Christian Hammermeister <c.hammermeister@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless"
homepage = "https://borderless-technologies.com/"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true, features = ["chrono04"] }
currency-4217 = { workspace = true, features = ["serde", "json-schema"] }
