[package]
name = "commerce-types"
version = "0.1.1"
edition = "2021"
description = "Useful datatypes for e-commerce, logistics and procurement"
authors = [ "Christian Hammermeister <c.hammermeister@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless"
homepage = "https://borderless-technologies.com/"
license = "MIT OR Apache-2.0"

[dependencies]
# NOTE: chrono has wasm-bindgen enabled by default, which causes linker errors when executing wasm contracts/agents
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true, features = ["chrono04"] }
currency-4217 = { workspace = true, features = ["serde", "json-schema"] }
