[package]
name = "currency-4217"
version = "0.1.0"
edition = "2021"
description = "ISO-4217 compliant definition of 'money' and 'currency'"
authors = [ "Christian Hammermeister <c.hammermeister@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
serde_json.workspace = true
postcard.workspace = true

[features]
serde = [ "dep:serde" ]
json-schema = [ "dep:schemars" ]
