[package]
name = "borderless-hash"
version = "1.0.0"
edition = "2021"

[features]
default = []
fb-headers = ["rust-embed"]

[dependencies]
base16 = "0.2.1"
flatbuffers = "25.1.24"
serde = { workspace = true, features = ["derive"] }
sha3 = "0.10.8"
rust-embed = {version = "8.7.2", optional = true}

[dev-dependencies]
serde_json.workspace = true

[build-dependencies]
flatc-rust = "0.2.0"
