[package]
name = "borderless-id-types"
version = "0.1.3"
edition = "2021"
description = "Definition of various identifier types for the borderless ecosystem"
authors = [ "Christian Hammermeister <c.hammermeister@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless"
homepage = "https://borderless-technologies.com/"
license-file = "../../LICENSE"

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v8"] }
borderless-hash = { version = "1", path = "../hash" }
bytes = "1.10.1"

[dev-dependencies]
uuid = { workspace = true, features = ["serde", "v8", "v4"] }
rand.workspace = true
serde_json.workspace = true

[features]
default = []
generate_ids = ["uuid/v4"]
