[package]
name = "borderless-pkg"
version = "0.1.0"
edition = "2021"
description = "Definition of the borderless 'package' format to wrap executable wasm binaries"
authors = [ "Christian Hammermeister <c.hammermeister@borderless-technologies.com>", "Paul Jökel <paul.joekel@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless"
homepage = "https://borderless-technologies.com/"
license-file = "../../LICENSE"

[dependencies]
base64 = "0.22.1"
borderless-hash.workspace = true
serde.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
serde_json.workspace = true
