[package]
name = "borderless-registry-client"
version = "0.1.0"
edition = "2021"

[dependencies]
borderless-format.workspace = true
borderless-hash.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
async-trait = "0.1"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
