[package]
name = "borderless-registry-server"
version = "0.1.0"
edition = "2021"

[dependencies]
borderless-kv-store.workspace = true
borderless-format.workspace = true
borderless-id-types.workspace = true
borderless-hash.workspace = true
anyhow.workspace = true
thiserror.workspace = true

axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.32", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1"
async-trait = "0.1"
