[package]
name = "borderless-abi"
version = "0.1.0"
edition = "2021"
description = "Abstract ABI definition for the borderless smart-contracts and software-agents"
authors = [ "Christian Hammermeister <c.hammermeister@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless"
homepage = "https://borderless-technologies.com/"
license-file = "../../LICENSE"

[dependencies]

