[package]
name = "borderless"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
borderless-abi.workspace = true
borderless-id-types.workspace = true
borderless-pkg.workspace = true
borderless-sdk-macros.workspace = true
borderless-hash.workspace = true
postcard.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
nohash-hasher.workspace = true
xxhash-rust.workspace = true
http = "1.3.1"

# Dependencies required by native compilation
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand.workspace = true

[dev-dependencies]
borderless-id-types = { workspace = true, features = [ "generate_ids" ] }

[features]
default = []
generate_ids = ["borderless-id-types/generate_ids"]
