[package]
name = "borderless"
version = "0.2.1"
edition = "2021"
description = "SDK for borderless packages"
authors = [ "Christian Hammermeister <c.hammermeister@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless"
homepage = "https://borderless-technologies.com/"
license-file = "../../LICENSE"

[dependencies]
anyhow.workspace = true
borderless-abi.workspace = true
borderless-id-types.workspace = true
borderless-pkg.workspace = true
borderless-sdk-macros.workspace = true
borderless-hash.workspace = true
currency-4217 = { workspace = true, features = ["serde"] }
postcard.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
nohash-hasher.workspace = true
xxhash-rust.workspace = true
http = "1.3.1"

# Dependencies required by native compilation
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand.workspace = true

[dev-dependencies]
borderless-id-types = { workspace = true, features = [ "generate_ids" ] }

[features]
default = []
generate_ids = ["borderless-id-types/generate_ids"]
