[package]
name = "borderless-sdk-macros"
version = "0.2.0"
edition = "2021"
description = "Core implementation of all macros related to contracts or software-agents."
authors = [ "Christian Hammermeister <c.hammermeister@borderless-technologies.com>" ]
repository = "https://github.com/borderless-tech/borderless"
homepage = "https://borderless-technologies.com/"
license-file = "../../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
xxhash-rust = { version = "0.8", features = ["const_xxh3", "xxh64", "xxh32"] }
convert_case = "0.8"
