[package]
name = "borderless-kv-backends"
version = "0.2.0"
edition = "2021"
authors = ["Paul Becker", "Christian Hammermeister"]
description = "Backend implementation of the kv-traits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde.workspace = true
anyhow.workspace = true
borderless-kv-traits = { path = "../kv-traits" }
